--- a/aio.ipynb
+++ b/aio.ipynb
@@ -193,16 +193,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-04-30 23:25:34,586] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n",
       "---------baseline---------\n",
-      "2024-04-30 23:25:40,973\u001b[32m <INFO> WatchDog: success/total: 5/5\u001b[0m\n",
+      "2024-05-03 15:32:13,274\u001b[32m <INFO> WatchDog: success/total: 5/5\u001b[0m\n",
       "{118: {'val': {'accuracy': 85.72, 'F1-score': 85.24, 'loss': 0.5},\n",
       "       'test': {'accuracy': 85.65, 'F1-score': 85.34, 'loss': 0.5}},\n",
       " 149: {'val': {'accuracy': 85.63, 'F1-score': 85.21, 'loss': 0.41},\n",
@@ -216,7 +215,7 @@
       "{'val': {'accuracy': 85.64, 'F1-score': 85.21, 'loss': 0.47},\n",
       " 'test': {'accuracy': 85.16, 'F1-score': 84.9, 'loss': 0.48}}\n",
       "---------TWR---------\n",
-      "2024-04-30 23:25:40,976\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-05-03 15:32:13,279\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  43 118 149 107 12\n",
       "{43: {'val': {'accuracy': 86.04, 'F1-score': 85.96, 'loss': 1.7},\n",
       "      'test': {'accuracy': 86.16, 'F1-score': 86.16, 'loss': 1.72}},\n",
@@ -273,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +281,7 @@
        "'100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -301,43 +300,20 @@
      "output_type": "stream",
      "text": [
       "---------TWR-H/P---------\n",
-      "2024-04-30 23:30:17,977 <DEBUG> WatchDog: ❌ Failed: outputs/BQ/chinese-macbert-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.4_only_pos_record_pipline/seed_of_stage1=43/1/16/2e-05/43\u001b[0m\n"
+      "54 54 21 14 53\n",
+      "{43: {'val': {'acc_pipline': 86.16, 'f1_pipline': 86.11, 'accuracy': 85.69, 'F1-score': 85.72, 'loss': 1.89},\n",
+      "      'test': {'acc_pipline': 86.21, 'f1_pipline': 86.24, 'accuracy': 86.19, 'F1-score': 86.29, 'loss': 1.96}},\n",
+      " 118: {'val': {'acc_pipline': 86.43, 'f1_pipline': 85.96, 'accuracy': 85.97, 'F1-score': 85.59, 'loss': 2.08},\n",
+      "       'test': {'acc_pipline': 86.01, 'f1_pipline': 85.71, 'accuracy': 86.16, 'F1-score': 85.93, 'loss': 2.13}},\n",
+      " 149: {'val': {'acc_pipline': 86.32, 'f1_pipline': 86.02, 'accuracy': 85.6, 'F1-score': 85.35, 'loss': 1.96},\n",
+      "       'test': {'acc_pipline': 85.7, 'f1_pipline': 85.45, 'accuracy': 85.64, 'F1-score': 85.45, 'loss': 1.99}},\n",
+      " 107: {'val': {'acc_pipline': 86.43, 'f1_pipline': 86.36, 'accuracy': 85.59, 'F1-score': 85.65, 'loss': 1.65},\n",
+      "       'test': {'acc_pipline': 85.82, 'f1_pipline': 85.95, 'accuracy': 85.35, 'F1-score': 85.59, 'loss': 1.68}},\n",
+      " 12: {'val': {'acc_pipline': 86.75, 'f1_pipline': 86.56, 'accuracy': 86.15, 'F1-score': 86.07, 'loss': 1.89},\n",
+      "      'test': {'acc_pipline': 85.74, 'f1_pipline': 85.71, 'accuracy': 85.31, 'F1-score': 85.32, 'loss': 2.02}}}\n",
+      "{'val': {'acc_pipline': 86.42, 'f1_pipline': 86.2, 'accuracy': 85.8, 'F1-score': 85.68, 'loss': 1.89},\n",
+      " 'test': {'acc_pipline': 85.9, 'f1_pipline': 85.81, 'accuracy': 85.73, 'F1-score': 85.72, 'loss': 1.96}}\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #800000; text-decoration-color: #800000\">╭─────────────────────────────── </span><span style=\"color: #800000; text-decoration-color: #800000; font-weight: bold\">Traceback </span><span style=\"color: #bf7f7f; text-decoration-color: #bf7f7f; font-weight: bold\">(most recent call last)</span><span style=\"color: #800000; text-decoration-color: #800000\"> ────────────────────────────────╮</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> in <span style=\"color: #00ff00; text-decoration-color: #00ff00\">&lt;module&gt;</span>:<span style=\"color: #0000ff; text-decoration-color: #0000ff\">20</span>                                                                                   <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>                                                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">17 │   </span>seeds_not_del = []                                                                      <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">18 │   </span><span style=\"color: #0000ff; text-decoration-color: #0000ff\">for</span> metric <span style=\"color: #ff00ff; text-decoration-color: #ff00ff\">in</span> [<span style=\"color: #808000; text-decoration-color: #808000\">\"acc_pipline\"</span>, <span style=\"color: #808000; text-decoration-color: #808000\">\"accuracy\"</span>]:                                              <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">19 │   │   </span>metric_dict_topk1, _ = WatchDog.topk(_metric_dicts, <span style=\"color: #0000ff; text-decoration-color: #0000ff\">1</span>, metric_for_compare=metric    <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #800000; text-decoration-color: #800000\">❱ </span>20 <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">│   │   </span>seeds_not_del.append(<span style=\"color: #00ffff; text-decoration-color: #00ffff\">list</span>(metric_dict_topk1.keys())[<span style=\"color: #0000ff; text-decoration-color: #0000ff\">0</span>])                             <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">21 │   # print(seeds_not_del)</span>                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">22 │   </span><span style=\"color: #0000ff; text-decoration-color: #0000ff\">if</span> _mean:                                                                               <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">23 │   │   </span>metric_dicts[seed_of_stage1] = _mean                                                <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">╰──────────────────────────────────────────────────────────────────────────────────────────────────╯</span>\n",
-       "<span style=\"color: #ff0000; text-decoration-color: #ff0000; font-weight: bold\">IndexError: </span>list index out of range\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[31m╭─\u001b[0m\u001b[31m──────────────────────────────\u001b[0m\u001b[31m \u001b[0m\u001b[1;31mTraceback \u001b[0m\u001b[1;2;31m(most recent call last)\u001b[0m\u001b[31m \u001b[0m\u001b[31m───────────────────────────────\u001b[0m\u001b[31m─╮\u001b[0m\n",
-       "\u001b[31m│\u001b[0m in \u001b[92m<module>\u001b[0m:\u001b[94m20\u001b[0m                                                                                   \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m                                                                                                  \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m17 \u001b[0m\u001b[2m│   \u001b[0mseeds_not_del = []                                                                      \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m18 \u001b[0m\u001b[2m│   \u001b[0m\u001b[94mfor\u001b[0m metric \u001b[95min\u001b[0m [\u001b[33m\"\u001b[0m\u001b[33macc_pipline\u001b[0m\u001b[33m\"\u001b[0m, \u001b[33m\"\u001b[0m\u001b[33maccuracy\u001b[0m\u001b[33m\"\u001b[0m]:                                              \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m19 \u001b[0m\u001b[2m│   │   \u001b[0mmetric_dict_topk1, _ = WatchDog.topk(_metric_dicts, \u001b[94m1\u001b[0m, metric_for_compare=metric    \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m \u001b[31m❱ \u001b[0m20 \u001b[2m│   │   \u001b[0mseeds_not_del.append(\u001b[96mlist\u001b[0m(metric_dict_topk1.keys())[\u001b[94m0\u001b[0m])                             \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m21 \u001b[0m\u001b[2m│   \u001b[0m\u001b[2m# print(seeds_not_del)\u001b[0m                                                                  \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m22 \u001b[0m\u001b[2m│   \u001b[0m\u001b[94mif\u001b[0m _mean:                                                                               \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m23 \u001b[0m\u001b[2m│   │   \u001b[0mmetric_dicts[seed_of_stage1] = _mean                                                \u001b[31m│\u001b[0m\n",
-       "\u001b[31m╰──────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
-       "\u001b[1;91mIndexError: \u001b[0mlist index out of range\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -347,7 +323,7 @@
     "metric_for_compare = \"accuracy\"\n",
     "\n",
     "times = \"0.1\"\n",
-    "ratio = 0.4\n",
+    "ratio = 0.2\n",
     "# times=\"None\"\n",
     "\n",
     "metric_dicts = dict()\n",
@@ -3310,7 +3286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -3318,7 +3294,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-04-08 12:52:29,269\u001b[32m <INFO> WatchDog: success/total: 5/5\u001b[0m\n",
+      "2024-05-03 15:33:29,230\u001b[32m <INFO> WatchDog: success/total: 5/5\u001b[0m\n",
       "{78: {'val': {'accuracy': 91.43, 'F1-score': 88.46, 'loss': 0.26}},\n",
       " 22: {'val': {'accuracy': 91.42, 'F1-score': 88.47, 'loss': 0.26}},\n",
       " 44: {'val': {'accuracy': 91.34, 'F1-score': 88.31, 'loss': 0.26}},\n",
@@ -3364,7 +3340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -3372,7 +3348,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-04-29 14:44:08,966\u001b[32m <INFO> WatchDog: success/total: 9/9\u001b[0m\n",
+      "2024-05-02 13:21:23,927\u001b[32m <INFO> WatchDog: success/total: 9/9\u001b[0m\n",
       "{44: {'val': {'accuracy': 88.24, 'F1-score': 91.55, 'loss': 0.28},\n",
       "      'test': {'accuracy': 87.65, 'F1-score': 90.89, 'loss': 0.33}},\n",
       " 13: {'val': {'accuracy': 90.93, 'F1-score': 93.31, 'loss': 0.24},\n",
@@ -3386,7 +3362,7 @@
       "{'val': {'accuracy': 89.02, 'F1-score': 92.07, 'loss': 0.27},\n",
       " 'test': {'accuracy': 87.5, 'F1-score': 90.72, 'loss': 0.31}}\n",
       "---------TWR---------\n",
-      "2024-04-29 14:44:08,971\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-05-02 13:21:23,931\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  9 37 59 2 44\n",
       "{9: {'val': {'accuracy': 88.24, 'F1-score': 91.58, 'loss': 1.51},\n",
       "     'test': {'accuracy': 88.41, 'F1-score': 91.47, 'loss': 1.54}},\n",
@@ -3443,16 +3419,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------TWR-H/P---------\n",
+      "2 10 8 71 6\n",
+      "{9: {'val': {'acc_pipline': 87.75, 'f1_pipline': 91.2, 'accuracy': 87.75, 'F1-score': 91.1, 'loss': 1.5},\n",
+      "     'test': {'acc_pipline': 88.87, 'f1_pipline': 91.74, 'accuracy': 88.75, 'F1-score': 91.56, 'loss': 1.51}},\n",
+      " 37: {'val': {'acc_pipline': 89.46, 'f1_pipline': 92.31, 'accuracy': 89.71, 'F1-score': 92.47, 'loss': 1.47},\n",
+      "      'test': {'acc_pipline': 88.06, 'f1_pipline': 91.03, 'accuracy': 88.17, 'F1-score': 91.01, 'loss': 1.61}},\n",
+      " 59: {'val': {'acc_pipline': 89.95, 'f1_pipline': 92.84, 'accuracy': 90.44, 'F1-score': 93.1, 'loss': 1.36},\n",
+      "      'test': {'acc_pipline': 87.77, 'f1_pipline': 90.98, 'accuracy': 88.17, 'F1-score': 91.2, 'loss': 1.59}},\n",
+      " 2: {'val': {'acc_pipline': 88.97, 'f1_pipline': 92.06, 'accuracy': 88.48, 'F1-score': 91.71, 'loss': 1.24},\n",
+      "     'test': {'acc_pipline': 88.12, 'f1_pipline': 91.2, 'accuracy': 88.0, 'F1-score': 91.03, 'loss': 1.38}},\n",
+      " 44: {'val': {'acc_pipline': 87.75, 'f1_pipline': 91.2, 'accuracy': 86.76, 'F1-score': 90.39, 'loss': 1.48},\n",
+      "      'test': {'acc_pipline': 87.88, 'f1_pipline': 90.98, 'accuracy': 88.0, 'F1-score': 90.96, 'loss': 1.51}}}\n",
+      "{'val': {'acc_pipline': 88.78, 'f1_pipline': 91.92, 'accuracy': 88.63, 'F1-score': 91.75, 'loss': 1.41},\n",
+      " 'test': {'acc_pipline': 88.14, 'f1_pipline': 91.19, 'accuracy': 88.22, 'F1-score': 91.15, 'loss': 1.52}}\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"---------TWR-H/P---------\")\n",
     "MetricDict.custom_metric_scale_map = {\"acc_pipline\": 1, \"f1_pipline\": 1}\n",
     "metric_for_compare = \"acc_pipline\"\n",
     "metric_for_compare = \"accuracy\"\n",
     "\n",
-    "ratio = 0.2\n",
+    "ratio = 0.8\n",
     "\n",
     "metric_dicts = dict()\n",
     "seeds = []\n",
