--- a/aio.ipynb
+++ b/aio.ipynb
@@ -2995,15 +2995,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "---------baseline---------\n",
+      "2024-05-03 15:36:12,341\u001b[32m <INFO> WatchDog: success/total: 6/6\u001b[0m\n",
+      "{0: {'val': {'accuracy': 91.62, 'F1-score': 88.8, 'loss': 0.23}},\n",
+      " 23: {'val': {'accuracy': 91.6, 'F1-score': 88.79, 'loss': 0.23}},\n",
+      " 78: {'val': {'accuracy': 91.54, 'F1-score': 88.75, 'loss': 0.23}},\n",
+      " 18: {'val': {'accuracy': 91.54, 'F1-score': 88.72, 'loss': 0.23}},\n",
+      " 33: {'val': {'accuracy': 91.48, 'F1-score': 88.64, 'loss': 0.23}}}\n",
+      "{'val': {'accuracy': 91.56, 'F1-score': 88.74, 'loss': 0.23}}\n",
       "---------TWR---------\n",
-      "2024-05-02 13:27:18,190\u001b[32m <INFO> WatchDog: success/total: 30/30\u001b[0m\n",
+      "2024-05-03 15:36:12,346\u001b[32m <INFO> WatchDog: success/total: 30/30\u001b[0m\n",
       "best_sedds_of_stage1:  33 18 78 31 23\n",
       "{33: {'val': {'accuracy': 91.45, 'F1-score': 88.69, 'loss': 1.02}},\n",
       " 18: {'val': {'accuracy': 91.45, 'F1-score': 88.64, 'loss': 1.04}},\n",
@@ -3023,18 +3031,18 @@
     "\n",
     "top_k = 5\n",
     "\n",
-    "# print(\"---------baseline---------\")\n",
-    "# seeds_dir = Path(\"outputs/QQP/roberta-base/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/\")\n",
-    "# # 删除失败的种子\n",
-    "# # for seed_dir in seeds_dir.iterdir():\n",
-    "# #     if int(seed_dir.name) not in metric_dicts.keys():\n",
-    "# #         shutil.rmtree(seed_dir)\n",
-    "# metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir=seeds_dir)\n",
-    "# metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
-    "# # seeds = \"29 109 38 14 44\"\n",
-    "# # metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
-    "# pp(metric_dict_topk)\n",
-    "# pp(mean)\n",
+    "print(\"---------baseline---------\")\n",
+    "seeds_dir = Path(\"outputs/QQP/roberta-base/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/\")\n",
+    "# 删除失败的种子\n",
+    "# for seed_dir in seeds_dir.iterdir():\n",
+    "#     if int(seed_dir.name) not in metric_dicts.keys():\n",
+    "#         shutil.rmtree(seed_dir)\n",
+    "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir=seeds_dir)\n",
+    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "# seeds = \"29 109 38 14 44\"\n",
+    "# metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
+    "pp(metric_dict_topk)\n",
+    "pp(mean)\n",
     "\n",
     "\n",
     "print(\"---------TWR---------\")\n",
@@ -3054,9 +3062,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 191,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------TWR-H/P---------\n",
+      "2024-05-03 16:29:42,038 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=33/1/16/2e-06/0\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #800000; text-decoration-color: #800000\">╭─────────────────────────────── </span><span style=\"color: #800000; text-decoration-color: #800000; font-weight: bold\">Traceback </span><span style=\"color: #bf7f7f; text-decoration-color: #bf7f7f; font-weight: bold\">(most recent call last)</span><span style=\"color: #800000; text-decoration-color: #800000\"> ────────────────────────────────╮</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> in <span style=\"color: #00ff00; text-decoration-color: #00ff00\">&lt;module&gt;</span>:<span style=\"color: #0000ff; text-decoration-color: #0000ff\">15</span>                                                                                   <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>                                                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">12 │   </span>seeds_dir = <span style=\"color: #808000; text-decoration-color: #808000\">f\"outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_h</span>    <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">13 │   </span>                                                                                        <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">14 │   </span>seeds_dir = Path(seeds_dir)                                                             <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #800000; text-decoration-color: #800000\">❱ </span>15 <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">│   </span>_metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=<span style=\"color: #0000ff; text-decoration-color: #0000ff\">True</span>)          <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">16 │   </span>_metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, <span style=\"color: #0000ff; text-decoration-color: #0000ff\">1</span>, metric_for_compare=metric    <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">17 │   </span>seeds_not_del = []                                                                      <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">18 │   </span><span style=\"color: #0000ff; text-decoration-color: #0000ff\">for</span> metric <span style=\"color: #ff00ff; text-decoration-color: #ff00ff\">in</span> [<span style=\"color: #808000; text-decoration-color: #808000\">\"acc_pipline\"</span>, <span style=\"color: #808000; text-decoration-color: #808000\">\"accuracy\"</span>]:                                              <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>                                                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #bfbf7f; text-decoration-color: #bfbf7f\">/home/jjwang/codes/toolkit/toolkit/training/</span><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">watchdog.py</span>:<span style=\"color: #0000ff; text-decoration-color: #0000ff\">334</span> in <span style=\"color: #00ff00; text-decoration-color: #00ff00\">metric_dicts_from_diff_seeds</span>      <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>                                                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">331 </span><span style=\"color: #bfbf7f; text-decoration-color: #bfbf7f\">│   │   </span><span style=\"color: #808000; text-decoration-color: #808000\">return: `dict[seed][split] = MetricDict`</span>                                           <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">332 </span><span style=\"color: #bfbf7f; text-decoration-color: #bfbf7f\">│   │   </span><span style=\"color: #808000; text-decoration-color: #808000\">\"\"\"</span>                                                                                <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">333 │   │   </span>seeds_dir = Path(seeds_dir)                                                        <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #800000; text-decoration-color: #800000\">❱ </span>334 <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">│   │   </span><span style=\"color: #0000ff; text-decoration-color: #0000ff\">assert</span> seeds_dir.exists(), <span style=\"color: #808000; text-decoration-color: #808000\">f\"Seeds directory dose NOT exist: `{</span>seeds_dir<span style=\"color: #808000; text-decoration-color: #808000\">}`\"</span>        <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">335 │   │   </span>seed_dirs = <span style=\"color: #00ffff; text-decoration-color: #00ffff\">list</span>(seeds_dir.iterdir())                                              <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">336 │   │   # seed_dirs = list(seeds_dir.glob(\"*\"))</span>                                            <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">337 │   │   </span>success = <span style=\"color: #0000ff; text-decoration-color: #0000ff\">0</span>                                                                        <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">╰──────────────────────────────────────────────────────────────────────────────────────────────────╯</span>\n",
+       "<span style=\"color: #ff0000; text-decoration-color: #ff0000; font-weight: bold\">AssertionError: </span>Seeds directory dose NOT exist: \n",
+       "`outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_mod<span style=\"color: #808000; text-decoration-color: #808000\">el_hardcases_from_baseline_warmboost_fix_num_rat</span>\n",
+       "<span style=\"color: #808000; text-decoration-color: #808000\">io</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.</span>2_record_pipline/<span style=\"color: #808000; text-decoration-color: #808000\">seed_of_stage1</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">18</span>/<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span>/<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">16</span>/<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2e-06</span>`\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[31m╭─\u001b[0m\u001b[31m──────────────────────────────\u001b[0m\u001b[31m \u001b[0m\u001b[1;31mTraceback \u001b[0m\u001b[1;2;31m(most recent call last)\u001b[0m\u001b[31m \u001b[0m\u001b[31m───────────────────────────────\u001b[0m\u001b[31m─╮\u001b[0m\n",
+       "\u001b[31m│\u001b[0m in \u001b[92m<module>\u001b[0m:\u001b[94m15\u001b[0m                                                                                   \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m                                                                                                  \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m12 \u001b[0m\u001b[2m│   \u001b[0mseeds_dir = \u001b[33mf\u001b[0m\u001b[33m\"\u001b[0m\u001b[33moutputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_h\u001b[0m    \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m13 \u001b[0m\u001b[2m│   \u001b[0m                                                                                        \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m14 \u001b[0m\u001b[2m│   \u001b[0mseeds_dir = Path(seeds_dir)                                                             \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m \u001b[31m❱ \u001b[0m15 \u001b[2m│   \u001b[0m_metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=\u001b[94mTrue\u001b[0m)          \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m16 \u001b[0m\u001b[2m│   \u001b[0m_metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, \u001b[94m1\u001b[0m, metric_for_compare=metric    \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m17 \u001b[0m\u001b[2m│   \u001b[0mseeds_not_del = []                                                                      \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m18 \u001b[0m\u001b[2m│   \u001b[0m\u001b[94mfor\u001b[0m metric \u001b[95min\u001b[0m [\u001b[33m\"\u001b[0m\u001b[33macc_pipline\u001b[0m\u001b[33m\"\u001b[0m, \u001b[33m\"\u001b[0m\u001b[33maccuracy\u001b[0m\u001b[33m\"\u001b[0m]:                                              \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m                                                                                                  \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m \u001b[2;33m/home/jjwang/codes/toolkit/toolkit/training/\u001b[0m\u001b[1;33mwatchdog.py\u001b[0m:\u001b[94m334\u001b[0m in \u001b[92mmetric_dicts_from_diff_seeds\u001b[0m      \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m                                                                                                  \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m331 \u001b[0m\u001b[2;33m│   │   \u001b[0m\u001b[33mreturn: `dict[seed][split] = MetricDict`\u001b[0m                                           \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m332 \u001b[0m\u001b[2;33m│   │   \u001b[0m\u001b[33m\"\"\"\u001b[0m                                                                                \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m333 \u001b[0m\u001b[2m│   │   \u001b[0mseeds_dir = Path(seeds_dir)                                                        \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m \u001b[31m❱ \u001b[0m334 \u001b[2m│   │   \u001b[0m\u001b[94massert\u001b[0m seeds_dir.exists(), \u001b[33mf\u001b[0m\u001b[33m\"\u001b[0m\u001b[33mSeeds directory dose NOT exist: `\u001b[0m\u001b[33m{\u001b[0mseeds_dir\u001b[33m}\u001b[0m\u001b[33m`\u001b[0m\u001b[33m\"\u001b[0m        \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m335 \u001b[0m\u001b[2m│   │   \u001b[0mseed_dirs = \u001b[96mlist\u001b[0m(seeds_dir.iterdir())                                              \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m336 \u001b[0m\u001b[2m│   │   \u001b[0m\u001b[2m# seed_dirs = list(seeds_dir.glob(\"*\"))\u001b[0m                                            \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m337 \u001b[0m\u001b[2m│   │   \u001b[0msuccess = \u001b[94m0\u001b[0m                                                                        \u001b[31m│\u001b[0m\n",
+       "\u001b[31m╰──────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
+       "\u001b[1;91mAssertionError: \u001b[0mSeeds directory dose NOT exist: \n",
+       "`outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_mod\u001b[33mel_hardcases_from_baseline_warmboost_fix_num_rat\u001b[0m\n",
+       "\u001b[33mio\u001b[0m=\u001b[1;36m0\u001b[0m\u001b[1;36m.\u001b[0m2_record_pipline/\u001b[33mseed_of_stage1\u001b[0m=\u001b[1;36m18\u001b[0m/\u001b[1;36m1\u001b[0m/\u001b[1;36m16\u001b[0m/\u001b[1;36m2e-06\u001b[0m`\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "print(\"---------TWR-H/P---------\")\n",
     "MetricDict.custom_metric_scale_map = {\"acc_pipline\": 1, \"f1_pipline\": 1}\n",
@@ -3068,14 +3144,17 @@
     "metric_dicts = dict()\n",
     "seeds = []\n",
     "for seed_of_stage1 in best_seeds_of_stage1:\n",
-    "    seeds_dir = f\"outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}/seed_of_stage1={seed_of_stage1}/3/16/2e-06\"\n",
+    "    seeds_dir = f\"outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_record_pipline/seed_of_stage1={seed_of_stage1}/3/16/2e-06\"\n",
+    "    seeds_dir = f\"outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_record_pipline/seed_of_stage1={seed_of_stage1}/1/16/2e-06\"\n",
+    "\n",
     "    seeds_dir = Path(seeds_dir)\n",
     "    _metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=True)\n",
     "    _metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric_for_compare)\n",
     "    seeds_not_del = []\n",
     "    for metric in [\"acc_pipline\", \"accuracy\"]:\n",
     "        metric_dict_topk1, _ = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric)\n",
-    "        seeds_not_del.append(list(metric_dict_topk1.keys())[0])\n",
+    "        if _:\n",
+    "            seeds_not_del.append(list(metric_dict_topk1.keys())[0])\n",
     "    # print(seeds_not_del)\n",
     "    if _mean:\n",
     "        metric_dicts[seed_of_stage1] = _mean\n",
