--- a/aio.ipynb
+++ b/aio.ipynb
@@ -2995,16 +2995,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-05-04 13:50:00,452] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n",
       "---------baseline---------\n",
-      "2024-05-04 13:50:06,055\u001b[32m <INFO> WatchDog: success/total: 6/6\u001b[0m\n",
+      "2024-05-05 16:12:30,411\u001b[32m <INFO> WatchDog: success/total: 6/6\u001b[0m\n",
       "{0: {'val': {'accuracy': 91.62, 'F1-score': 88.8, 'loss': 0.23}},\n",
       " 23: {'val': {'accuracy': 91.6, 'F1-score': 88.79, 'loss': 0.23}},\n",
       " 78: {'val': {'accuracy': 91.54, 'F1-score': 88.75, 'loss': 0.23}},\n",
@@ -3012,7 +3011,7 @@
       " 33: {'val': {'accuracy': 91.48, 'F1-score': 88.64, 'loss': 0.23}}}\n",
       "{'val': {'accuracy': 91.56, 'F1-score': 88.74, 'loss': 0.23}}\n",
       "---------TWR---------\n",
-      "2024-05-04 13:50:06,269\u001b[32m <INFO> WatchDog: success/total: 30/30\u001b[0m\n",
+      "2024-05-05 16:12:30,415\u001b[32m <INFO> WatchDog: success/total: 30/30\u001b[0m\n",
       "best_sedds_of_stage1:  33 18 78 31 23\n",
       "{33: {'val': {'accuracy': 91.45, 'F1-score': 88.69, 'loss': 1.02}},\n",
       " 18: {'val': {'accuracy': 91.45, 'F1-score': 88.64, 'loss': 1.04}},\n",
@@ -3063,7 +3062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3071,28 +3070,6 @@
      "output_type": "stream",
      "text": [
       "---------TWR-H/P---------\n",
-      "2024-05-04 13:52:06,083 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=33/1/16/2e-06/29\u001b[0m\n",
-      "2024-05-04 13:52:06,083 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=33/1/16/2e-06/31\u001b[0m\n",
-      "2024-05-04 13:52:06,084 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=33/1/16/2e-06/30\u001b[0m\n",
-      "2024-05-04 13:52:06,084 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=33/1/16/2e-06/32\u001b[0m\n",
-      "2024-05-04 13:52:06,085 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=33/1/16/2e-06/28\u001b[0m\n",
-      "2024-05-04 13:52:06,088 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=18/1/16/2e-06/29\u001b[0m\n",
-      "2024-05-04 13:52:06,089 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=18/1/16/2e-06/31\u001b[0m\n",
-      "2024-05-04 13:52:06,090 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=18/1/16/2e-06/32\u001b[0m\n",
-      "2024-05-04 13:52:06,091 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=18/1/16/2e-06/28\u001b[0m\n",
-      "2024-05-04 13:52:06,092 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=78/1/16/2e-06/29\u001b[0m\n",
-      "2024-05-04 13:52:06,093 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=78/1/16/2e-06/31\u001b[0m\n",
-      "2024-05-04 13:52:06,093 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=78/1/16/2e-06/30\u001b[0m\n",
-      "2024-05-04 13:52:06,094 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=78/1/16/2e-06/32\u001b[0m\n",
-      "2024-05-04 13:52:06,095 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=78/1/16/2e-06/28\u001b[0m\n",
-      "2024-05-04 13:52:06,096 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=31/1/16/2e-06/27\u001b[0m\n",
-      "2024-05-04 13:52:06,096 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=31/1/16/2e-06/29\u001b[0m\n",
-      "2024-05-04 13:52:06,097 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=31/1/16/2e-06/30\u001b[0m\n",
-      "2024-05-04 13:52:06,098 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=31/1/16/2e-06/28\u001b[0m\n",
-      "2024-05-04 13:52:06,099 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=23/1/16/2e-06/27\u001b[0m\n",
-      "2024-05-04 13:52:06,100 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=23/1/16/2e-06/29\u001b[0m\n",
-      "2024-05-04 13:52:06,100 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=23/1/16/2e-06/31\u001b[0m\n",
-      "2024-05-04 13:52:06,101 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.2_record_pipline/seed_of_stage1=23/1/16/2e-06/30\u001b[0m\n",
       "21 12 52 15 6\n",
       "{18: {'val': {'acc_pipline': 91.54, 'f1_pipline': 88.63, 'accuracy': 91.52, 'F1-score': 88.53, 'loss': 1.22}},\n",
       " 33: {'val': {'acc_pipline': 91.56, 'f1_pipline': 88.68, 'accuracy': 91.49, 'F1-score': 88.49, 'loss': 1.2}},\n",
@@ -3114,8 +3091,8 @@
     "metric_dicts = dict()\n",
     "seeds = []\n",
     "for seed_of_stage1 in best_seeds_of_stage1:\n",
-    "    seeds_dir = f\"outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_record_pipline/seed_of_stage1={seed_of_stage1}/3/16/2e-06\"\n",
     "    seeds_dir = f\"outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_record_pipline/seed_of_stage1={seed_of_stage1}/1/16/2e-06\"\n",
+    "    # seeds_dir = f\"outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_only_pos_record_pipline/seed_of_stage1={seed_of_stage1}/1/16/2e-06\"\n",
     "\n",
     "    seeds_dir = Path(seeds_dir)\n",
     "    _metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=True)\n",
