--- a/aio.ipynb
+++ b/aio.ipynb
@@ -3355,16 +3355,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-05-04 13:43:55,736] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n",
       "---------baseline---------\n",
-      "2024-05-04 13:44:01,907\u001b[32m <INFO> WatchDog: success/total: 5/5\u001b[0m\n",
+      "2024-05-05 16:02:06,805\u001b[32m <INFO> WatchDog: success/total: 5/5\u001b[0m\n",
       "{78: {'val': {'accuracy': 91.43, 'F1-score': 88.46, 'loss': 0.26}},\n",
       " 22: {'val': {'accuracy': 91.42, 'F1-score': 88.47, 'loss': 0.26}},\n",
       " 44: {'val': {'accuracy': 91.34, 'F1-score': 88.31, 'loss': 0.26}},\n",
@@ -3372,15 +3371,14 @@
       " 52: {'val': {'accuracy': 91.26, 'F1-score': 88.17, 'loss': 0.26}}}\n",
       "{'val': {'accuracy': 91.35, 'F1-score': 88.34, 'loss': 0.26}}\n",
       "---------TWR---------\n",
-      "2024-05-04 13:44:01,911 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/bert-base-uncased/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/3\u001b[0m\n",
-      "2024-05-04 13:44:01,912\u001b[32m <INFO> WatchDog: success/total: 11/12\u001b[0m\n",
-      "best_sedds_of_stage1:  31 22 0 52 44\n",
+      "2024-05-05 16:02:06,810\u001b[32m <INFO> WatchDog: success/total: 20/20\u001b[0m\n",
+      "best_sedds_of_stage1:  31 22 10 9 0\n",
       "{31: {'val': {'accuracy': 91.27, 'F1-score': 88.28, 'loss': 1.15}},\n",
       " 22: {'val': {'accuracy': 91.26, 'F1-score': 88.31, 'loss': 1.14}},\n",
-      " 0: {'val': {'accuracy': 91.22, 'F1-score': 88.22, 'loss': 1.16}},\n",
-      " 52: {'val': {'accuracy': 91.22, 'F1-score': 88.21, 'loss': 1.13}},\n",
-      " 44: {'val': {'accuracy': 91.2, 'F1-score': 88.18, 'loss': 1.14}}}\n",
-      "{'val': {'accuracy': 91.23, 'F1-score': 88.24, 'loss': 1.14}}\n"
+      " 10: {'val': {'accuracy': 91.23, 'F1-score': 88.25, 'loss': 1.15}},\n",
+      " 9: {'val': {'accuracy': 91.22, 'F1-score': 88.28, 'loss': 1.15}},\n",
+      " 0: {'val': {'accuracy': 91.22, 'F1-score': 88.22, 'loss': 1.16}}}\n",
+      "{'val': {'accuracy': 91.24, 'F1-score': 88.27, 'loss': 1.15}}\n"
      ]
     }
    ],
@@ -3416,6 +3414,48 @@
     "print(\"best_sedds_of_stage1: \", \" \".join(map(str, best_seeds_of_stage1)))\n",
     "pp(metric_dict_topk)\n",
     "pp(mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"---------TWR-H/P---------\")\n",
+    "MetricDict.custom_metric_scale_map = {\"acc_pipline\": 1, \"f1_pipline\": 1}\n",
+    "metric_for_compare = \"acc_pipline\"\n",
+    "metric_for_compare = \"accuracy\"\n",
+    "\n",
+    "ratio = 0.2\n",
+    "\n",
+    "metric_dicts = dict()\n",
+    "seeds = []\n",
+    "for seed_of_stage1 in best_seeds_of_stage1:\n",
+    "    seeds_dir = f\"outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_record_pipline/seed_of_stage1={seed_of_stage1}/3/16/2e-06\"\n",
+    "\n",
+    "    seeds_dir = Path(seeds_dir)\n",
+    "    _metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=True)\n",
+    "    _metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric_for_compare)\n",
+    "    seeds_not_del = []\n",
+    "    for metric in [\"acc_pipline\", \"accuracy\"]:\n",
+    "        metric_dict_topk1, _ = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric)\n",
+    "        if _:\n",
+    "            seeds_not_del.append(list(metric_dict_topk1.keys())[0])\n",
+    "    # print(seeds_not_del)\n",
+    "    if _mean:\n",
+    "        metric_dicts[seed_of_stage1] = _mean\n",
+    "        best_seed = list(_metric_dict_topk.keys())[0]\n",
+    "        seeds.append(str(best_seed))\n",
+    "        for seed_dir in seeds_dir.iterdir():\n",
+    "            if int(seed_dir.name) != best_seed and int(seed_dir.name) not in seeds_not_del and int(seed_dir.name) in _metric_dicts:\n",
+    "                shutil.rmtree(seed_dir)\n",
+    "                # print(seed_dir)\n",
+    "\n",
+    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, len(best_seeds_of_stage1))\n",
+    "print(\" \".join(seeds))\n",
+    "pp(metric_dict_topk, width=120)\n",
+    "pp(mean, width=120)"
    ]
   },
   {
