--- a/aio.ipynb
+++ b/aio.ipynb
@@ -3553,6 +3553,118 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### bert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------TWR---------\n",
+      "2024-05-05 16:29:28,622\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "best_sedds_of_stage1:  35 37 44 53 57\n",
+      "{35: {'val': {'accuracy': 86.27, 'F1-score': 90.48, 'loss': 1.66},\n",
+      "      'test': {'accuracy': 84.81, 'F1-score': 89.0, 'loss': 1.9}},\n",
+      " 37: {'val': {'accuracy': 84.56, 'F1-score': 89.04, 'loss': 1.61},\n",
+      "      'test': {'accuracy': 84.52, 'F1-score': 88.68, 'loss': 1.81}},\n",
+      " 44: {'val': {'accuracy': 86.03, 'F1-score': 90.19, 'loss': 1.58},\n",
+      "      'test': {'accuracy': 84.46, 'F1-score': 88.6, 'loss': 1.85}},\n",
+      " 53: {'val': {'accuracy': 86.27, 'F1-score': 90.41, 'loss': 1.68},\n",
+      "      'test': {'accuracy': 84.41, 'F1-score': 88.68, 'loss': 1.9}},\n",
+      " 57: {'val': {'accuracy': 85.54, 'F1-score': 89.95, 'loss': 1.7},\n",
+      "      'test': {'accuracy': 84.35, 'F1-score': 88.63, 'loss': 1.96}}}\n",
+      "{'val': {'accuracy': 85.73, 'F1-score': 90.01, 'loss': 1.65},\n",
+      " 'test': {'accuracy': 84.51, 'F1-score': 88.72, 'loss': 1.88}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from toolkit.training import WatchDog\n",
+    "from toolkit.metric import MetricDict\n",
+    "from pprint import pp\n",
+    "import shutil\n",
+    "from pathlib import Path\n",
+    "\n",
+    "top_k = 5\n",
+    "\n",
+    "# print(\"---------baseline---------\")\n",
+    "# seeds_dir = Path(\"outputs/MRPC/bert-base-uncased/ORI/all/Baseline_nodrop_baseline/3/16/2e-05\")\n",
+    "# # 删除失败的种子\n",
+    "# # for seed_dir in seeds_dir.iterdir():\n",
+    "# #     if int(seed_dir.name) not in metric_dicts.keys():\n",
+    "# #         shutil.rmtree(seed_dir)\n",
+    "# metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir=seeds_dir)\n",
+    "# metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "# # seeds = \"29 109 38 14 44\"\n",
+    "# # metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
+    "# pp(metric_dict_topk)\n",
+    "# pp(mean)\n",
+    "\n",
+    "\n",
+    "print(\"---------TWR---------\")\n",
+    "seeds_dir = \"outputs/MRPC/bert-base-uncased/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/2e-05\"\n",
+    "seeds_dir = Path(seeds_dir)\n",
+    "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir)\n",
+    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "best_seeds_of_stage1 = metric_dict_topk.keys()\n",
+    "if len(best_seeds_of_stage1) >= 10:\n",
+    "    for seed_dir in seeds_dir.iterdir():\n",
+    "        if int(seed_dir.name) not in best_seeds_of_stage1 and int(seed_dir.name) in metric_dicts:\n",
+    "            shutil.rmtree(seed_dir)\n",
+    "print(\"best_sedds_of_stage1: \", \" \".join(map(str, best_seeds_of_stage1)))\n",
+    "pp(metric_dict_topk)\n",
+    "pp(mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"---------TWR-H/P---------\")\n",
+    "MetricDict.custom_metric_scale_map = {\"acc_pipline\": 1, \"f1_pipline\": 1}\n",
+    "metric_for_compare = \"acc_pipline\"\n",
+    "metric_for_compare = \"accuracy\"\n",
+    "\n",
+    "ratio = 0.8\n",
+    "\n",
+    "metric_dicts = dict()\n",
+    "seeds = []\n",
+    "for seed_of_stage1 in best_seeds_of_stage1:\n",
+    "    seeds_dir = f\"outputs/MRPC/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio={ratio}_record_pipline/seed_of_stage1={seed_of_stage1}/1/16/2e-06\"\n",
+    "    seeds_dir = Path(seeds_dir)\n",
+    "    _metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=True)\n",
+    "    _metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric_for_compare)\n",
+    "    seeds_not_del = []\n",
+    "    for metric in [\"acc_pipline\", \"accuracy\"]:\n",
+    "        metric_dict_topk1, _ = WatchDog.topk(_metric_dicts, 1, metric_for_compare=metric)\n",
+    "        seeds_not_del.append(list(metric_dict_topk1.keys())[0])\n",
+    "    # print(seeds_not_del)\n",
+    "    if _mean:\n",
+    "        metric_dicts[seed_of_stage1] = _mean\n",
+    "        best_seed = list(_metric_dict_topk.keys())[0]\n",
+    "        seeds.append(str(best_seed))\n",
+    "        for seed_dir in seeds_dir.iterdir():\n",
+    "            if int(seed_dir.name) != best_seed and int(seed_dir.name) not in seeds_not_del and int(seed_dir.name) in _metric_dicts:\n",
+    "                shutil.rmtree(seed_dir)\n",
+    "                # print(seed_dir)\n",
+    "\n",
+    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, len(best_seeds_of_stage1))\n",
+    "print(\" \".join(seeds))\n",
+    "pp(metric_dict_topk, width=120)\n",
+    "pp(mean, width=120)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "--------"
    ]
   },
