--- a/aio.ipynb
+++ b/aio.ipynb
@@ -3332,7 +3332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3340,7 +3340,8 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-05-05 16:02:06,805\u001b[32m <INFO> WatchDog: success/total: 5/5\u001b[0m\n",
+      "2024-05-05 16:26:05,240 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/bert-base-uncased/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/31\u001b[0m\n",
+      "2024-05-05 16:26:05,241\u001b[32m <INFO> WatchDog: success/total: 5/6\u001b[0m\n",
       "{78: {'val': {'accuracy': 91.43, 'F1-score': 88.46, 'loss': 0.26}},\n",
       " 22: {'val': {'accuracy': 91.42, 'F1-score': 88.47, 'loss': 0.26}},\n",
       " 44: {'val': {'accuracy': 91.34, 'F1-score': 88.31, 'loss': 0.26}},\n",
@@ -3348,7 +3349,7 @@
       " 52: {'val': {'accuracy': 91.26, 'F1-score': 88.17, 'loss': 0.26}}}\n",
       "{'val': {'accuracy': 91.35, 'F1-score': 88.34, 'loss': 0.26}}\n",
       "---------TWR---------\n",
-      "2024-05-05 16:02:06,810\u001b[32m <INFO> WatchDog: success/total: 20/20\u001b[0m\n",
+      "2024-05-05 16:26:05,245\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  31 22 10 9 0\n",
       "{31: {'val': {'accuracy': 91.27, 'F1-score': 88.28, 'loss': 1.15}},\n",
       " 22: {'val': {'accuracy': 91.26, 'F1-score': 88.31, 'loss': 1.14}},\n",
