--- a/aio.ipynb
+++ b/aio.ipynb
@@ -3451,7 +3451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3530,7 +3530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3598,15 +3598,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "---------baseline---------\n",
+      "2024-05-05 16:51:41,185 <DEBUG> WatchDog: ❌ Failed: outputs/MRPC/bert-base-uncased/ORI/all/Baseline_nodrop_baseline/3/16/2e-05/34\u001b[0m\n",
+      "2024-05-05 16:51:41,187 <DEBUG> WatchDog: ❌ Failed: outputs/MRPC/bert-base-uncased/ORI/all/Baseline_nodrop_baseline/3/16/2e-05/33\u001b[0m\n",
+      "2024-05-05 16:51:41,188\u001b[32m <INFO> WatchDog: success/total: 8/10\u001b[0m\n",
+      "{43: {'val': {'accuracy': 85.05, 'F1-score': 89.43, 'loss': 0.38},\n",
+      "      'test': {'accuracy': 85.28, 'F1-score': 89.28, 'loss': 0.42}},\n",
+      " 71: {'val': {'accuracy': 85.78, 'F1-score': 89.79, 'loss': 0.39},\n",
+      "      'test': {'accuracy': 84.29, 'F1-score': 88.44, 'loss': 0.45}},\n",
+      " 59: {'val': {'accuracy': 86.52, 'F1-score': 90.37, 'loss': 0.32},\n",
+      "      'test': {'accuracy': 84.29, 'F1-score': 88.45, 'loss': 0.37}},\n",
+      " 30: {'val': {'accuracy': 85.29, 'F1-score': 89.83, 'loss': 0.36},\n",
+      "      'test': {'accuracy': 84.23, 'F1-score': 88.45, 'loss': 0.4}},\n",
+      " 31: {'val': {'accuracy': 85.78, 'F1-score': 89.68, 'loss': 0.33},\n",
+      "      'test': {'accuracy': 83.71, 'F1-score': 87.65, 'loss': 0.38}}}\n",
+      "{'val': {'accuracy': 85.68, 'F1-score': 89.82, 'loss': 0.36},\n",
+      " 'test': {'accuracy': 84.36, 'F1-score': 88.45, 'loss': 0.4}}\n",
       "---------TWR---------\n",
-      "2024-05-05 16:29:28,622\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
+      "2024-05-05 16:51:41,191\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  35 37 44 53 57\n",
       "{35: {'val': {'accuracy': 86.27, 'F1-score': 90.48, 'loss': 1.66},\n",
       "      'test': {'accuracy': 84.81, 'F1-score': 89.0, 'loss': 1.9}},\n",
@@ -3632,18 +3648,18 @@
     "\n",
     "top_k = 5\n",
     "\n",
-    "# print(\"---------baseline---------\")\n",
-    "# seeds_dir = Path(\"outputs/MRPC/bert-base-uncased/ORI/all/Baseline_nodrop_baseline/3/16/2e-05\")\n",
-    "# # 删除失败的种子\n",
-    "# # for seed_dir in seeds_dir.iterdir():\n",
-    "# #     if int(seed_dir.name) not in metric_dicts.keys():\n",
-    "# #         shutil.rmtree(seed_dir)\n",
-    "# metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir=seeds_dir)\n",
-    "# metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
-    "# # seeds = \"29 109 38 14 44\"\n",
-    "# # metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
-    "# pp(metric_dict_topk)\n",
-    "# pp(mean)\n",
+    "print(\"---------baseline---------\")\n",
+    "seeds_dir = Path(\"outputs/MRPC/bert-base-uncased/ORI/all/Baseline_nodrop_baseline/3/16/2e-05\")\n",
+    "# 删除失败的种子\n",
+    "# for seed_dir in seeds_dir.iterdir():\n",
+    "#     if int(seed_dir.name) not in metric_dicts.keys():\n",
+    "#         shutil.rmtree(seed_dir)\n",
+    "metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir=seeds_dir)\n",
+    "metric_dict_topk, mean = WatchDog.topk(metric_dicts, top_k)\n",
+    "# seeds = \"29 109 38 14 44\"\n",
+    "# metric_dict_topk, mean = WatchDog.topk({seed: metric_dicts[seed] for seed in map(int, seeds.split())})\n",
+    "pp(metric_dict_topk)\n",
+    "pp(mean)\n",
     "\n",
     "\n",
     "print(\"---------TWR---------\")\n",
